Fix sidebar header spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
 .sidebar {
     display: grid;
     /* grid-template-columns: 1fr 3fr; */
-    grid-template-rows: 100px 300px 120px 100px;
+    grid-template-rows: 120px 300px 120px 100px;
     padding: 1rem;
     background-color: var(--bar-btn-color);
     color: var(--foreground-color);
